--- a/SnoKE/Podfile
+++ b/SnoKE/Podfile
@@ -6,5 +6,8 @@ target 'SnoKE' do
   use_frameworks!
 
   pod 'TextFieldEffects’, :git => 'https://github.com/raulriera/TextFieldEffects.git'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
 
 end
