--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 SnoKE/SnoKE.xcodeproj/project.xcworkspace/xcuserdata/jazzdiluffy.xcuserdatad/UserInterfaceState.xcuserstate
+
+# Pods
+SnoKE/Pods/
+SnoKE/Podfile.lock
